# zhiyuan

./: .gitignore  AGENTS.md  Cargo.toml  README.md  instances.json  justfile  spec.md  zhiyuan.toml.example
agent_docs/: agents.md  architecture.md  cli.md  memory.md  pipeline.md  prompts.md  roadmap.md  search.md  迁移_1.md
config/: default.toml
crates/zhiyuan-agents/: Cargo.toml
crates/zhiyuan-agents/src/: extractor.rs  lib.rs  planner.rs  query_planner.rs  searcher.rs  synthesizer.rs  util.rs  verifier.rs  writer.rs
crates/zhiyuan-core/: Cargo.toml
crates/zhiyuan-core/src/: argument.rs  lib.rs  llm.rs
crates/zhiyuan-embedding/: Cargo.toml
crates/zhiyuan-embedding/src/: index.rs  lib.rs  local.rs
crates/zhiyuan-extract/: Cargo.toml
crates/zhiyuan-extract/src/: lib.rs
crates/zhiyuan-memory/: Cargo.toml
crates/zhiyuan-memory/src/: lib.rs
crates/zhiyuan-orchestrator/: Cargo.toml
crates/zhiyuan-orchestrator/src/: lib.rs  orchestrator.rs  quality.rs
crates/zhiyuan-robust/: Cargo.toml
crates/zhiyuan-robust/src/: lib.rs
crates/zhiyuan-search/: Cargo.toml
crates/zhiyuan-search/src/: lib.rs
crates/zhiyuan-tests/: Cargo.toml
crates/zhiyuan-tests/tests/: pipeline.rs
searxng/: docker-compose.yml
searxng/core-config/: settings.yml
src/: llm.rs  main.rs  pdf.rs  template.typ  tui.rs
template/: lib.typ
