[workspace]
members = [
    "crates/zhiyuan-core",
    "crates/zhiyuan-search",
    "crates/zhiyuan-extract",
    "crates/zhiyuan-memory",
    "crates/zhiyuan-orchestrator",
    "crates/zhiyuan-agents",
    "crates/zhiyuan-robust",
    "crates/zhiyuan-tests",
]
resolver = "2"

[package]
name = "zhiyuan"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "crates/zhiyuan-core" }
zhiyuan-search = { path = "crates/zhiyuan-search" }
zhiyuan-extract = { path = "crates/zhiyuan-extract" }
zhiyuan-memory = { path = "crates/zhiyuan-memory" }
zhiyuan-orchestrator = { path = "crates/zhiyuan-orchestrator" }
zhiyuan-agents = { path = "crates/zhiyuan-agents" }
zhiyuan-robust = { path = "crates/zhiyuan-robust" }

tokio = { version = "1", features = ["full"] }
tuirealm = "4"
ratatui = "0.28"
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dotenvy = "0.15"
toml = "0.8"
dirs = "6"
typst = "0.14.2"
typst-pdf = "0.14.2"
chrono = "0.4"
base64 = "0.22.1"

[[bin]]
name = "zhiyuan"
path = "src/main.rs"
