[package]
name = "zhiyuan-agents"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "../zhiyuan-core" }
zhiyuan-search = { path = "../zhiyuan-search" }
zhiyuan-extract = { path = "../zhiyuan-extract" }
zhiyuan-memory = { path = "../zhiyuan-memory" }
zhiyuan-robust = { path = "../zhiyuan-robust" }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
