[package]
name = "zhiyuan-extract"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "../zhiyuan-core" }
reqwest = { version = "0.12", features = ["json"] }
dom_smoothie = "0.18"
pdf_oxide = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
textdistance = "1"
regex-lite = "0.1"
tokio = { version = "1", features = ["time"] }
tempfile = "3"
