[package]
name = "zhiyuan-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "../zhiyuan-core" }
zhiyuan-memory = { path = "../zhiyuan-memory" }
zhiyuan-agents = { path = "../zhiyuan-agents" }
zhiyuan-robust = { path = "../zhiyuan-robust" }
zhiyuan-search = { path = "../zhiyuan-search" }
zhiyuan-extract = { path = "../zhiyuan-extract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
chrono = "0.4"
futures = "0.3"
