[package]
name = "zhiyuan-robust"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "../zhiyuan-core" }
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
thiserror = "2"
backoff = { version = "0.4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.18"
