[package]
name = "zhiyuan-search"
version = "0.1.0"
edition = "2021"

[dependencies]
zhiyuan-core = { path = "../zhiyuan-core" }
zhiyuan-robust = { path = "../zhiyuan-robust" }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
tracing = "0.1"
thiserror = "2"
chrono = "0.4"
tokio = { version = "1", features = ["sync"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
